[package]
name = "umbra-livereload"
description = "Opt-in dev live-reload for umbra — a file watcher pushes reload / CSS-swap events to the browser over SSE; the client script is auto-injected into HTML responses. Dev-only, zero per-app code."
workspace = "../.."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
umbra = { path = "../../crates/umbra", version = "0.0.1" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
# OS file-system watcher (inotify/FSEvents/ReadDirectoryChangesW).
notify = "6"
# SSE transport + the HTML-injection middleware.
axum = "0.8"
http = "1"
futures-util = { version = "0.3", default-features = false }
# Wrap the broadcast receiver as a Stream for the SSE body.
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
